[gd_scene load_steps=3 format=3 uid="uid://cclfrrtwylx1n"]

[ext_resource type="Script" path="res://src/world/generator/generator_tester.gd" id="1_drh67"]
[ext_resource type="Script" path="res://src/world/generator/block_generator.gd" id="2_dlca5"]

[node name="GeneratorTester" type="Node2D"]
script = ExtResource("1_drh67")

[node name="Generator" type="Node" parent="."]
script = ExtResource("2_dlca5")
size = Vector2i(8, 8)

[node name="RoomContainer" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
offset_right = 144.0
offset_bottom = 210.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Label" type="Label" parent="CanvasLayer/Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Width"
vertical_alignment = 1

[node name="XTextEdit" type="TextEdit" parent="CanvasLayer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"

[node name="Label2" type="Label" parent="CanvasLayer/Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Height"
vertical_alignment = 1

[node name="YTextEdit" type="TextEdit" parent="CanvasLayer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="CanvasLayer/Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "MinC"
vertical_alignment = 1

[node name="MinTextEdit" type="TextEdit" parent="CanvasLayer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="CanvasLayer/Panel/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "MaxC"
vertical_alignment = 1

[node name="MaxTextEdit" type="TextEdit" parent="CanvasLayer/Panel/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/Panel/VBoxContainer"]
layout_mode = 2
text = "Generate"

[connection signal="focus_exited" from="CanvasLayer/Panel/VBoxContainer/GridContainer/XTextEdit" to="." method="_on_x_text_edit_focus_exited"]
[connection signal="focus_exited" from="CanvasLayer/Panel/VBoxContainer/GridContainer/YTextEdit" to="." method="_on_y_text_edit_focus_exited"]
[connection signal="focus_exited" from="CanvasLayer/Panel/VBoxContainer/GridContainer/MinTextEdit" to="." method="_on_min_text_edit_focus_exited"]
[connection signal="focus_exited" from="CanvasLayer/Panel/VBoxContainer/GridContainer/MaxTextEdit" to="." method="_on_max_text_edit_focus_exited"]
[connection signal="pressed" from="CanvasLayer/Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
